<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ConnectBot</string>
    <string name="app_desc">Simple, powerful, open-source SSH client.</string>
    
    <string name="title_hosts_list">ConnectBot</string>
    <string name="title_host">Host</string>
    <string name="title_shell">Secure Shell</string>
    <string name="title_password">Input Password</string>
    <string name="title_pubkey">Public Keys</string>
    <string name="title_entropy">Gathering Entropy</string>
    
	<string name="resolve_edit">Edit Host</string>
	<string name="resolve_connect">Connect</string>
	<string name="resolve_entropy">Gather Entropy</string>
	
    <string name="menu_insert">Add Host</string>
    <string name="menu_delete">Delete Host</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_pubkey">Public Keys</string>
    
    <string name="menu_about">About</string>
    
    <string name="pubkey_generate">Generate</string>
	<string name="pubkey_delete">Delete key</string>
	<string name="pubkey_gather_entropy">Gathering Entropy</string>
    <string name="pubkey_touch_prompt">Touch this box to gather randomness: </string>
    <string name="pubkey_generating">Generating key...</string>
    <string name="pubkey_copy_clipboard">Copy signature</string>
    <string name="pubkey_list_empty">Tap "Menu" to create\nor import public keys.</string>
    <string name="pubkey_unknown_format">Unknown format</string>
    <string name="pubkey_change_password">Change Password</string>

    <string name="prompt_old_password">Old password:</string>
    <string name="prompt_password">Password:</string>
    <string name="prompt_again">(again)</string>
    
    <string name="alert_passwords_do_not_match_msg">Passwords do not match!</string>
    <string name="alert_wrong_password_msg">Wrong password!</string>
    <string name="alert_key_corrupted_msg">Private key appears corrupt!</string>
    
    <string name="button_ok">Ok</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_change">Change</string>
    <string name="button_generate">Generate Key</string>
    <string name="button_resize">Resize</string>
    
    <string name="alert_disconnect_msg">Connection Lost</string>
    
    <string name="msg_copyright">Copyright &#169; 2007-2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/</string>

 	<!-- DO NOT MANUALLY UPDATE VERSION!!!
 	     Updating is update by the ant task "update-version" in build.xml
 	  -->
    <string name="msg_version">ConnectBot (working copy)</string>


	<string name="pref_emulation">emulation</string>
	<string name="pref_scrollback">scrollback</string>
	<string name="pref_keepalive">keepalive</string>
	<string name="pref_keymode">keymode</string>
	<string name="pref_memkeys">memkeys</string>
	<string name="pref_rotation">rotation</string>
	<string name="pref_camera">camera</string>
	<string name="pref_update">update</string>
	<string name="pref_lastchecked">lastchecked</string>
	
	<string name="list_keymode_right">Use right-side keys</string>
	<string name="list_keymode_left">Use left-side keys</string>
	<string name="list_keymode_none">Don't use</string>
	
	<string name="list_pubkeyids_none">Do not use keys</string>
	<string name="list_pubkeyids_any">Use any unlocked key</string>

	<string name="list_update_daily">Daily</string>
	<string name="list_update_weekly">Weekly</string>
	<string name="list_update_never">Never</string>

    <string name="bind_minutes">%s minutes ago</string>
    <string name="bind_hours">%s hours ago</string>
    <string name="bind_days">%s days ago</string>
    


	<string name="console_copy_done">Copied %d bytes to clipboard</string>
	<string name="console_copy_start">Touch and drag to select area to copy</string>

	<string name="console_menu_disconnect">Disconnect</string>
	<string name="console_menu_copy">Copy</string>
	<string name="console_menu_paste">Paste</string>
	<string name="console_menu_tunnel">Tunnel</string>
	<string name="console_menu_resize">Force Size</string>

	<string name="tunnel_pos">Create tunnel</string>
	<string name="tunnel_neg">Cancel</string>

	<string name="tunnel_done_local">Successfully created tunnel -L%d:%s:%d</string>
	<string name="tunnel_done_remote">Successfully created tunnel -R%d:%s:%d</string>
	<string name="tunnel_problem">Problem creating tunnel, maybe you're using ports under 1024?</string>

	<string name="list_format_error">Use the format 'username@hostname:port'</string>
	<string name="list_menu_sortcolor">Sort by color</string>
	<string name="list_menu_sortname">Sort by name</string>
	<string name="list_menu_settings">Settings</string>
	<string name="list_menu_about">About</string>

	<string name="list_host_disconnect">Disconnect</string>
	<string name="list_host_edit">Edit host</string>
	<string name="list_host_delete">Delete host</string>

	<string name="list_rotation_land">Force landscape</string>
	<string name="list_rotation_port">Force portrait</string>
	<string name="list_rotation_auto">Automatic</string>

	<string name="list_camera_ctrlaspace">Ctrl+A then Space</string>
	<string name="list_camera_ctrla">Ctrl+A</string>
	<string name="list_camera_esc">Esc</string>
	<string name="list_camera_none">None</string>

	<string name="delete_message">Are you sure you want to delete '%s'?</string>
	<string name="delete_pos">Yes, delete</string>
	<string name="delete_neg">Cancel</string>


	<string name="wizard_agree">Agree</string>
	<string name="wizard_cancel">Cancel</string>
	<string name="wizard_next">Next</string>
	<string name="wizard_back">Back</string>


	<string name="terminal_hostkey_warn">The authenticity of host '%s' can't be established.</string>
	<string name="terminal_hostkey">RSA key fingerprint is %s</string>
	<string name="terminal_hostkey_prompt">Are you sure you want\nto continue connecting?</string>

	<string name="terminal_failed">Host key verification failed.</string>

	<string name="terminal_auth">Trying to authenticate</string>

	<string name="terminal_auth_pass">Attempting 'password' authentication</string>
	<string name="terminal_auth_pass_hint">Password</string>
	<string name="terminal_auth_pass_fail">Authentication method 'password' failed</string>

	<string name="terminal_auth_ki">Attempting 'keyboard-interactive' authentication</string>
	<string name="terminal_auth_ki_fail">Authentication method 'keyboard-interactive' failed</string>

	<string name="terminal_auth_fail">[Your host doesn't support 'password' or 'keyboard-interactive' authentication.]</string>

	<string name="upgrade">New version</string>
	<string name="upgrade_pos">Yes, upgrade</string>
	<string name="upgrade_neg">Not right now</string>




</resources>
