<?xml version="1.0" encoding="utf-8"?>
<!--
	ConnectBot: simple, powerful, open-source SSH client for Android
	Copyright (C) 2007-2008 Kenny Root, Jeffrey Sharkey
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="Terminal emulation">
		
		<ListPreference
			android:key="@string/pref_emulation"
			android:title="Emulation mode"
			android:summary="Terminal emulation mode to use for PTY connections"
			android:entries="@array/list_emulation_modes"
			android:defaultValue="screen"
			android:entryValues="@array/list_emulation_modes"
			/>
	
		<EditTextPreference
			android:key="@string/pref_scrollback"
			android:title="Scrollback size"
			android:summary="Size of scrollback buffer to keep in memory for each console"
			android:defaultValue="140"
			android:singleLine="true"
			/>
			
	</PreferenceCategory>

	<PreferenceCategory
		android:title="User interface">

		<ListPreference
			android:key="@string/pref_keymode"
			android:title="Directory shortcuts"
			android:summary="Select how to use Alt for '/' and Shift for Tab"
			android:entries="@array/list_keymode"
			android:defaultValue="Use right-side keys"
			android:entryValues="@array/list_keymode"
			/>
	
		<CheckBoxPreference
			android:key="@string/pref_keepalive"
			android:title="Keep screen awake"
			android:summary="Prevent the screen from turning off when working in a console"
			android:defaultValue="true"
			/>

	</PreferenceCategory>

</PreferenceScreen>