<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content">

    <Button android:id="@+id/generate" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dip"
            android:text="@string/button_generate" />
            
    <TextView android:id="@+id/keyName" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:layout_below="@id/generate"
              android:text="Username:"/>

    <Button android:id="@+id/ok" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_below="@id/keyName"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dip"
            android:text="@string/button_ok" />

    <Button android:id="@+id/cancel"
    		android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_toLeft="@id/ok"
            android:layout_alignTop="@id/ok"
            android:text="@string/button_cancel" />
</RelativeLayout>