<?xml version="1.0" encoding="utf-8"?>
<!--
	ConnectBot: simple, powerful, open-source SSH client for Android
	Copyright (C) 2007-2008 Kenny Root, Jeffrey Sharkey
	
	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingLeft="10dip"
	android:paddingRight="10dip"
	>
	
	<TableLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
		
		<TableRow android:id="@+id/old_password_prompt">
			<TextView
				android:text="@string/prompt_old_password"
				android:paddingRight="10dip"
				android:gravity="right|center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium"
				/>
				
			<EditText
				android:id="@+id/old_password"
				android:layout_width="200dip"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:password="true"
				/>
		</TableRow>
				
		<TableRow>
			<TextView
				android:text="@string/prompt_password"
				android:paddingRight="10dip"
				android:gravity="right|center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium"
				/>
				
			<EditText
				android:id="@+id/password1"
				android:layout_width="200dip"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:password="true"
				/>
		</TableRow>
		
		<TableRow>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="right"
				>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prompt_password"
					android:paddingRight="10dip"
					android:gravity="right|bottom"
					android:textAppearance="?android:attr/textAppearanceMedium"
					/>
					
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/prompt_again"
					android:paddingRight="10dip"
					android:gravity="right|top"
					android:textAppearance="?android:attr/textAppearanceSmall"
					/>
			</LinearLayout>
			
			<EditText
				android:id="@+id/password2"
				android:layout_width="200dip"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:password="true"
				/>
		</TableRow>
		
	</TableLayout>
</LinearLayout>